--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
 
       <div class="navb-items ">
-        <div class="d-none d-md-flex ">
+        <div class="d-none d-lg-flex ">
         <div class="items">
           <a href="/">Home</a>
         </div>
