--- a/index.html
+++ b/index.html
@@ -88,10 +88,10 @@
         </div>
 
         <div class="modal-line">
-          <i class="fa-solid fa-graduation-cap"></i><a href="/blogs">Career</a>
+          <i class="fa-solid fa-graduation-cap"></i><a href="#career">Career</a>
         </div>
 
-       <a href="/contact" class="navb-button">Contact Us</a>
+       <a href="./contact.html" class="navb-button">Contact Us</a>
       </div>
 
       <div class="mobile-modal-footer">
