--- a/contact.html
+++ b/contact.html
@@ -229,7 +229,7 @@
       </div>
     </section>
     <div class="container-fluid">
-      <iframe src="https://www.google.com/maps/dir/alakahia/port+harcourt/@4.8671094,6.9305301,14z/data=!3m1!4b1!4m13!4m12!1m5!1m1!1s0x1069d07694c6e9df:0xdae693009c63a14c!2m2!1d6.9249387!2d4.8850902!1m5!1m1!1s0x1069cea39f2c48e3:0x53562bdd7d8832db!2m2!1d6.974604!2d4.8472226" width="100%" height="400px" frameborder="0" style="border: 0;"></iframe>
+      <iframe src="https://goo.gl/maps/TMxPYCYHLaGc8KKz8" width="100%" height="400px" frameborder="0" style="border: 0;"></iframe>
     </div>
 
     <section>
